force-app/main/default/objects/Applied_Bundle__c/Applied_Bundle__c.object-meta.xml
<CustomObject>
    <description>Joins bundles to Opportunities</description>
    <label>Applied Bundle</label>
    <nameField>
        <displayFormat>AB-{000000}</displayFormat>
        <label>Applied Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Bundle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>