force-app/main/default/objects/Applied_Bundle__c/fields/Bundle__c.field-meta.xml
<CustomField>
    <fullName>Bundle__c</fullName>
    <label>Bundle</label>
    <referenceTo>Bundle__c</referenceTo>
    <relationshipLabel>Applied Bundle</relationshipLabel>
    <relationshipName>Applied_Bundle</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>