force-app/main/default/objects/Applied_Bundle__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>fw1__Invoice__c</referenceTo>
    <relationshipLabel>Applied Bundle</relationshipLabel>
    <relationshipName>Applied_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>