force-app/main/default/objects/Applied_Bundle__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Applied Bundles</relationshipLabel>
    <relationshipName>Applied_Bundles</relationshipName>
    <type>Lookup</type>
</CustomField>