force-app/main/default/objects/Applied_Bundle__c/fields/Sales_Discount__c.field-meta.xml
<CustomField>
    <fullName>Sales_Discount__c</fullName>
    <description>Discretionary discount offered by Sales staff.</description>
    <label>Sales Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>